--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   equatable: ^2.0.7
   dartz: ^0.10.1
-  connectivity_plus: ^6.1.3
+  internet_connection_checker_plus: ^2.7.1
   http: ^1.3.0
   shared_preferences: ^2.5.2
 
