--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   mockito: ^5.4.5
   build_runner: ^2.4.15
   bloc_test: ^10.0.0
+  mocktail: ^1.0.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
