--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,14 @@ dependencies:
   internet_connection_checker_plus: ^2.7.1
   http: ^1.3.0
   shared_preferences: ^2.5.2
+  go_router: ^14.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
+  golden_toolkit: ^0.15.0
   build_runner: ^2.4.15
   bloc_test: ^10.0.0
   mocktail: ^1.0.4
