--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.3.0
   shared_preferences: ^2.5.2
   go_router: ^14.8.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
