--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.5.2
   go_router: ^14.8.1
   path_provider: ^2.1.5
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
