--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^14.8.1
   path_provider: ^2.1.5
   provider: ^6.1.2
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
