--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.2
   sqflite: ^2.4.2
+  bloc_concurrency: ^0.3.0
 
 dev_dependencies:
   flutter_test:
